# tauri-personal-finances

./: .gitignore  .lintstagedrc.json  AGENTS.md  GEMINI.md  PRD.md  README.md  TASKS.md  eslint.config.js  index.html  package.json  vite.config.ts
.agent/rules/: backend.md  frontend.md
.github/workflows/: release.yml
.husky/: pre-commit
docs/: MACOS_SIGNING.md
scripts/ralph/: prd.json  progress.txt  prompt.md  ralph.sh
src/: AGENTS.md  App.tsx  index.css
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250119000000_add_accounts_sort_order.sql  20260120000000_create_onboarding_steps.sql  20260122000000_create_retirement_plans.sql  20260123000000_create_retirement_plan_projections.sql  20260125000000_add_accounts_sub_category.sql  20260202000000_add_currency_rates_provider.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/services/: account.rs  balance_sheet.rs  currency_exchange_sync.rs  entry.rs  mod.rs  net_worth.rs  onboarding.rs  retirement.rs  retirement_plan.rs  retirement_plan_projection.rs  user_settings.rs
src-tauri/src/services/currency_rates/: currency_rate.rs  mod.rs  sync.rs  sync_frankfurter.rs
src/components/: app-layout.tsx  balance-sheet-card.tsx  currency-select.tsx  header.tsx  main-nav.tsx  page-container.tsx  page-title.tsx  year-selector.tsx
src/constants/: months.ts
src/hooks/: use-accounts.ts  use-balance-sheets.ts  use-currency-rates.ts  use-onboarding.ts  use-retirement-plans.ts  (+1 more)
tasks/: prd-initial-prototype.md  prd-retirement-planner.md
(+102 files in other folders)
