[package]
name = "personal-finances"
version = "0.1.0"
description = "A personal finance app built with Tauri"
authors = ["Juan Rodriguez <juan@timrodz.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "personal_finances_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
wiremock = {version="0.6.5"}
